--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
+# AI Pricing Backend (FastAPI)
+VITE_AI_API_URL=http://localhost:8000
+
+# Auth & Orders Backend (Node.js)
 VITE_API_URL=http://localhost:3001/api
