--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ VITE_AI_API_URL=http://localhost:8000
 
 # Auth & Orders Backend (Node.js)
 VITE_API_URL=http://localhost:3001/api
+
+VITE_GOOGLE_CLIENT_ID=1048206729994-eudfuc8946o40cpiu8khsmvhprrujnge.apps.googleusercontent.com
