--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # AI Pricing Backend (FastAPI)
-VITE_AI_API_URL=http://localhost:8000
+VITE_AI_API_URL=https://reprice-ml3.onrender.com
 
 # Auth & Orders Backend (Node.js)
-VITE_API_URL=http://localhost:3001/api
+VITE_API_URL=https://reprice-backend-a5mp.onrender.com/api
 
 VITE_GOOGLE_CLIENT_ID=1048206729994-eudfuc8946o40cpiu8khsmvhprrujnge.apps.googleusercontent.com
