--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 # AI Pricing Backend (FastAPI)
+# Use the hosted ML service by default.
 VITE_AI_API_URL=https://reprice-ml3.onrender.com
+# For local development, comment the line above and use:
+# VITE_AI_API_URL=http://127.0.0.1:8000
 
 # Auth & Orders Backend (Node.js)
 VITE_API_URL=https://reprice-backend-a5mp.onrender.com/api
