--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.462.0",
     "motion": "^12.23.26",
     "next-themes": "^0.3.0",
