--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # AI Pricing Backend (FastAPI)
-VITE_AI_API_URL=http://localhost:8000
+VITE_AI_API_URL=https://reprice-ml-backend.onrender.com
 
 # Auth & Orders Backend (Node.js)
 VITE_API_URL=https://reprice-backend-a5mp.onrender.com/api
