--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 VITE_AI_API_URL=https://reprice-ml-backend.onrender.com
 
 # Auth & Orders Backend (Node.js)
-VITE_API_URL=https://reprice-backend-a5mp.onrender.com/api
+VITE_API_URL=http://localhost:3001/api
+# https://reprice-backend-a5mp.onrender.com/api
 
 VITE_GOOGLE_CLIENT_ID=1048206729994-eudfuc8946o40cpiu8khsmvhprrujnge.apps.googleusercontent.com
